# Code-gen-for-robot-arm-OJT-FALL-2025-FPT

./: .gitignore  README.md  model.config  model.sdf  requirements.txt
CAM/: Cam.TXT
Codegen_install/: Codegen_install.vdproj
Core/CAM/: Model+SSD320  Model-SSDlite320.py  Model.py  Neuron.py
Core/CAM/Hardware/: CMakeLists.txt  CMakeSettings.json  DeviceInterface.cpp  DeviceInterface.h  HardwareInterface.cpp  LiveStreamProcessor.cpp  LiveStreamProcessor.h  VirtualCamera.cpp  VirtualCamera.h  rs-capture.cpp
Core/ROBOT/: API_Gemini.py
GUI/: App.xaml  App.xaml.cs  CodeGen.csproj  CodeGen.sln  MainWindow.xaml.cs  Mainwindow.xaml  MyApp.csproj
GUI/3D_model/AUBO_I10/: I10Mesh.001.stl  I10Mesh.002.stl  I10Mesh.003.stl  I10Mesh.004.stl  I10Mesh.005.stl  I10Mesh.006.stl  I10Mesh.007.stl  I10Mesh.008.stl  I10Mesh.009.stl  I10Mesh.010.stl  I10Mesh.011.stl  I10Mesh.012.stl  I10Mesh.013.stl  I10Mesh.014.stl  I10Mesh.015.stl  I10Mesh.016.stl  I10Mesh.017.stl  I10Mesh.018.stl  I10Mesh.019.stl  I10Mesh.020.stl  I10Mesh.021.stl  I10Mesh.022.stl  I10Mesh.023.stl  I10Mesh.024.stl  I10Mesh.025.stl  I10Mesh.026.stl  I10Mesh.027.stl  I10Mesh.028.stl  I10Mesh.029.stl  I10Mesh.030.stl  I10Mesh.031.stl  I10Mesh.032.stl  I10Mesh.stl  I10_Joint_2.stl  I10_Joint_4.stl  I10i10_arm_1.stl  I10i10_arm_2.stl  I10i10_base.stl  filelist.txt
GUI/3D_model/AUBO_I10_New/: CMakeList.txt  package.xml
GUI/3D_model/AUBO_I10_New/aubo_i10_description/: thong_so.txt
GUI/3D_model/AUBO_I10_New/aubo_i10_description/urdf/: aubo_i10.urdf
GUI/3D_model/AUBO_I10_New/launch/: display_rviz.launch  gazebo.launch
GUI/3D_model/AUBO_I10_New/meshes/: I10_Base.stl  I10_Joint_1.stl  I10_Joint_3.stl  I10_Joint_5.stl  I10_Joint_6.stl
GUI/Converters/: BoolToVisibilityConverter.cs  EnumToBoolConverter.cs
GUI/Helpers/: RelayCommand.cs
GUI/Models/: AnalysisResult.cs  ChatMessage.cs  Device.cs  Joint.cs  RobotConfiguration.cs  Robottype.cs
GUI/Services/: CameraService.cs  DeviceService.cs  RobotKinematicsService.cs  RobotModelLoaderService.cs
GUI/ViewModels/: CameraViewModel.cs  DeviceViewModel.cs  ProjectViewModel.cs  ValidateSimulateViewModel.cs
GUI/Views/: CameraView.xaml  CameraView.xaml.cs  DeviceView.xaml  DeviceView.xaml.cs  MainView.xaml  MainView.xaml.cs  ProjectView.xaml  ProjectView.xaml.cs  SettingsView.xaml  SettingsView.xaml.cs  ValidateSimulateView.xaml  ValidateSimulateView.xaml.cs
GUI/ViewsModels/: MainViewModel.cs
Report/: Presents.tex  References.bib  Report.tex
Report/figures/: Codesyn.tex
urdf/: aubo_i10.urdf  aubo_i10.urdf.xacro
