<?xml version="1.0"?>
<package format="3">
  <name>AUBO_I10</name>
  <version>0.1.0</version>
  <description>The AUBO_I10 robot description package</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Không cần nhiều dependencies nếu chỉ chứa URDF/meshes -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
